# ARHIAX-AgentCreator

./: .env.example  .env.production.example  .gitattributes  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  ARHIAX-AgentCreator_Caracteristicas.docx  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PRODUCTION-READINESS.md  README.md  SECURITY.md  STANDARD-v11.5-MAPPING.md  docker-compose.yml
docs/: ADR-ARHIAX-001-Tokens-Efimeros-y-Delegacion-Gobernada.md  ARHIAX_Arquitectura_de_Seguridad_Tokens_Efimeros_y_ADR.docx  ARHIAX_Arquitectura_de_Seguridad_para_Tokens_Efimeros_ES.md  ARHIAX_Ephemeral_Token_Security_Architecture.md  ARHIAX_v114_Changelog_v113_to_v114.docx  ARHIAX_v114_Enterprise_Pilot_Playbook.docx  ARHIAX_v114_Incident_Response_Runbooks.docx  ARHIA_47_Controles_Gobernanza_MultiAgente.docx  ARHIA_Hoja_de_Ruta_Ruta_C.docx  ARHIA_Paper_A_arXiv.docx  ARHIA_v115_C09_Spec_TR-2026-035_EN.docx  ARHIA_v115_C09_Spec_TR-2026-035_ES.docx  Sinergia_ARHIA_Detection_Ceiling_Glasswing_2026.docx  Sinergia_ARHIA_Detection_Ceiling_Glasswing_2026_EN.docx
runtime/: mcp_interceptor.py
runtime/c09/: LICENSE  README.md  pyproject.toml
runtime/c09/arhia_c09/: __init__.py  atk_bridge.py  cir.py  cir_persistent.py  divergence.py  divergence_v1_1.py  envelope.py  gate.py  ledger.py
runtime/c09/arhia_c09/tests/: __init__.py  test_atk_bridge.py  test_cir_persistent.py  test_detector_comparison_v01_vs_v11.py  test_fpr_compliant_traces.py  test_mythos_no_macro.py
runtime/c09/policy/: interp.rego
scripts/: generate-certs.sh  generate_token_security_docx.py
(+183 files in other folders)
