[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arhia-c09"
version = "0.1.0"
description = "ARHIA v11.5 C09 INTERP Bridge — reference implementation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Sinergia Consulting Group S.A.S.", email = "info@sinergia.co"},
]
keywords = ["AI governance", "interpretability", "ARHIA", "deceptive alignment", "INTERP-EV"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=42.0,<44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "mypy>=1.9,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arhia_c09*"]

[tool.pytest.ini_options]
testpaths = ["arhia_c09/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
